fix: updated alignment of corner blocks in sidebar with shadow effect

--- a/src/scss/filejet-scss/dashboard/_dashboard.scss
+++ b/src/scss/filejet-scss/dashboard/_dashboard.scss
@@ -71,10 +71,10 @@
       a::after {
         content: "";
         @extend .position-absolute;
-        width: 15%;
-        height: 100%;
-        right: -4.5%;
-        bottom: 49%;
+        width: 37px;
+        height: 61px;
+        right: -11.5px;
+        bottom: 25.6px;
         background-image: url("../../../../dist/images/icons/sidebar-top-corner.svg");
         background-repeat: no-repeat;
       }
@@ -82,10 +82,10 @@
       a::before {
         content: "";
         @extend .position-absolute;
-        width: 15%;
-        height: 100%;
-        right: -4.5%;
-        top: 48%;
+        width: 37px;
+        height: 61px;
+        right: -11.5px;
+        top: 29.5px;
         background-image: url("../../../../dist/images/icons/sidebar-bottom-corner.svg");
         background-repeat: no-repeat;
       }
