--- a/src/scss/filejet-scss/sidebar/_sidebar.scss
+++ b/src/scss/filejet-scss/sidebar/_sidebar.scss
@@ -9,7 +9,7 @@
 
 .sidebar {
   background: var(--bs-white);
-  box-shadow: 0px 12px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 0px 24px rgba(0, 0, 0, 0.06);
   font-size: 1.125rem;
 }
 
